# alphascan

./: .gitignore  README.md  requirements.txt  setup.cfg
src/: main.py
src/crypto/lib/: market.py
src/crypto/util/: binance_util.py
src/stock/: daily.py
src/stock/lib/: daily.py  intraday.py
src/stock/lib/fundamentals/: company_info.py  earnings.py
src/stock/lib/technicals/: indicators.py
src/util/: api_util.py
