[metadata]
name = alphascan-callim105
version = 0.0.1
author = Christian Lim
author_email = christiananthonylim1@gmail.com
description = A small package for investment ideas
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/callim105/alphascan
project_urls = 
    Bug Tracker = https://github.com/callim105/alphascan/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src